; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/panfrost/extr_panfrost_mmu.c_access_type_name.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/panfrost/extr_panfrost_mmu.c_access_type_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.panfrost_device = type { i32 }

@AS_FAULTSTATUS_ACCESS_TYPE_MASK = common dso_local global i32 0, align 4
@HW_FEATURE_AARCH64_MMU = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"ATOMIC\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"UNKNOWN\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"READ\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"WRITE\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"EXECUTE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.panfrost_device*, i32)* @access_type_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @access_type_name(%struct.panfrost_device* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.panfrost_device*, align 8
  %5 = alloca i32, align 4
  store %struct.panfrost_device* %0, %struct.panfrost_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @AS_FAULTSTATUS_ACCESS_TYPE_MASK, align 4
  %8 = and i32 %6, %7
  switch i32 %8, label %19 [
    i32 131, label %9
    i32 129, label %16
    i32 128, label %17
    i32 130, label %18
  ]

9:                                                ; preds = %2
  %10 = load %struct.panfrost_device*, %struct.panfrost_device** %4, align 8
  %11 = load i32, i32* @HW_FEATURE_AARCH64_MMU, align 4
  %12 = call i32 @panfrost_has_hw_feature(%struct.panfrost_device* %10, i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %21

15:                                               ; preds = %9
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %21

16:                                               ; preds = %2
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %21

17:                                               ; preds = %2
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %21

18:                                               ; preds = %2
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %21

19:                                               ; preds = %2
  %20 = call i32 @WARN_ON(i32 1)
  store i8* null, i8** %3, align 8
  br label %21

21:                                               ; preds = %19, %18, %17, %16, %15, %14
  %22 = load i8*, i8** %3, align 8
  ret i8* %22
}

declare dso_local i32 @panfrost_has_hw_feature(%struct.panfrost_device*, i32) #1

declare dso_local i32 @WARN_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
